--- a/customer/kubernetes/deployment.yaml
+++ b/customer/kubernetes/deployment.yaml
@@ -16,14 +16,14 @@ spec:
     spec:
       containers:
         - name: customer
-          image: username/customer:latest
+          image: cyberlhsdev/customer:v1
           ports:
             - containerPort: 8080
           readinessProbe:
             httpGet:
               path: '/actuator/health'
               port: 8080
-            initialDelaySeconds: 10
+            initialDelaySeconds: 30
             timeoutSeconds: 2
             periodSeconds: 5
             failureThreshold: 10
